기능: ModeMan 크롤링 데이터 수집 개선